--- a/index.html
+++ b/index.html
@@ -5361,7 +5361,7 @@ const activeMarkerPopups = [];
 
 let currentMarkerSize = 5;
 
-async function updateClusters() {
+function updateClusters() {
   if (geojson.features.length === 0) {
     console.log("No features to update clusters.");
     return;
@@ -5376,7 +5376,7 @@ async function updateClusters() {
   existingMarkers.forEach((marker) => marker.remove());
   existingMarkers = [];
 
-  for (const cluster of clusters) {
+  clusters.forEach(async (cluster) => {
     const el = document.createElement("div");
     el.className = cluster.properties.cluster ? "cluster-marker" : "marker";
     const iconSize = [`${currentMarkerSize}vh`, `${currentMarkerSize}vh`];
@@ -5384,7 +5384,7 @@ async function updateClusters() {
     el.style.height = iconSize[1];
     el.style.cursor = "pointer";
     el.style.borderRadius = "50%";
-    el.style.touchAction = "none"; // Prevent default touch behaviors
+    el.style.animation = "slideIn 0.5s ease-in-out";
 
     if (cluster.properties.cluster) {
       el.textContent = cluster.properties.point_count_abbreviated;
@@ -5393,35 +5393,17 @@ async function updateClusters() {
       el.style.lineHeight = iconSize[0];
       el.style.backgroundColor = "rgba(255, 255, 255, 0.8)";
 
-      // Add both click and touchend listeners with a shared handler
-      const handleClusterInteraction = async (e) => {
+      el.addEventListener("click", async (e) => {
         e.stopPropagation();
-        if (e.type === "touchend") {
-          e.preventDefault(); // Prevent default touch behaviors like scrolling
-        }
-        if (!map.isStyleLoaded()) {
-          await new Promise((resolve) => map.once("idle", resolve));
-        }
-        map.setPitch(0);
-        map.dragPan.disable();
-        map.scrollZoom.disable();
         const expansionZoom = await index.getClusterExpansionZoom(cluster.id);
         map.easeTo({
           center: cluster.geometry.coordinates,
           zoom: expansionZoom + 0.1,
-          duration: 1000
-        });
-        console.log("map.easeTo called for cluster:", cluster.geometry.coordinates);
-        map.once("moveend", () => {
-          map.dragPan.enable();
-          map.scrollZoom.enable();
+          duration: 1000 // Set duration to 1000ms (1 second) or higher for a slower transition
         });
         activePolygonPopups.forEach((popup) => popup.remove());
         activeMarkerPopups.forEach((popup) => popup.remove());
-      };
-
-      el.addEventListener("click", handleClusterInteraction);
-      el.addEventListener("touchend", handleClusterInteraction);
+      });
     } else {
       try {
         const lowQualityUrl = await createLowQualityImage(cluster.properties.imageUrl);
@@ -5454,62 +5436,26 @@ async function updateClusters() {
         }
       });
 
-      // Add both click and touchend listeners with a shared handler
-      const handleMarkerInteraction = (e) => {
+      el.addEventListener("click", (e) => {
         e.stopPropagation();
-        if (e.type === "touchend") {
-          e.preventDefault(); // Prevent default touch behaviors
-        }
-        if (!map.isStyleLoaded()) {
-          map.once("idle", () => {
-            map.setPitch(0);
-            map.dragPan.disable();
-            map.scrollZoom.disable();
-            map.easeTo({
-              center: cluster.geometry.coordinates,
-              zoom: map.getZoom(),
-              duration: 1000
-            });
-            console.log("map.easeTo called for marker:", cluster.geometry.coordinates);
-            popup.setLngLat(cluster.geometry.coordinates).addTo(map);
-            applyAllStyles();
-            if (currentUfoModel) {
-              scene.remove(currentUfoModel);
-              crosshair.style.display = "none";
-            }
-            map.once("moveend", () => {
-              map.dragPan.enable();
-              map.scrollZoom.enable();
-            });
-          });
-          return;
-        }
-        map.setPitch(0);
-        map.dragPan.disable();
-        map.scrollZoom.disable();
+        activePolygonPopups.forEach((popup) => popup.remove());
+        activeMarkerPopups.forEach((popup) => popup.remove());
+        CloseALL();
         map.easeTo({
           center: cluster.geometry.coordinates,
           zoom: map.getZoom(),
-          duration: 1000
+          duration: 1000 // Set duration to 1000ms (1 second) or higher for a slower transition
         });
-        console.log("map.easeTo called for marker:", cluster.geometry.coordinates);
         popup.setLngLat(cluster.geometry.coordinates).addTo(map);
         applyAllStyles();
         if (currentUfoModel) {
           scene.remove(currentUfoModel);
           crosshair.style.display = "none";
         }
-        map.once("moveend", () => {
-          map.dragPan.enable();
-          map.scrollZoom.enable();
-        });
-      };
-
-      el.addEventListener("click", handleMarkerInteraction);
-      el.addEventListener("touchend", handleMarkerInteraction);
+      });
     }
     existingMarkers.push(marker);
-  }
+  });
 }
 
 
