--- a/index.html
+++ b/index.html
@@ -5392,11 +5392,7 @@ function updateClusters() {
       el.style.lineHeight = iconSize[0];
       el.style.backgroundColor = "rgba(255, 255, 255, 0.8)";
 
-      el.addEventListener("click", handleMarkerClick);
-      el.addEventListener("touchstart", handleMarkerClick);
-
-      async function handleMarkerClick(e) {
-        e.preventDefault(); // Prevent default touch behavior
+      el.addEventListener("click", async (e) => {
         e.stopPropagation();
         const expansionZoom = await index.getClusterExpansionZoom(cluster.id);
         map.easeTo({
@@ -5406,7 +5402,7 @@ function updateClusters() {
         });
         activePolygonPopups.forEach((popup) => popup.remove());
         activeMarkerPopups.forEach((popup) => popup.remove());
-      };
+      });
     } else {
       try {
         const lowQualityUrl = await createLowQualityImage(cluster.properties.imageUrl);
@@ -5439,8 +5435,7 @@ function updateClusters() {
         }
       });
 
-      async function handleMarkerClick(e) {
-        e.preventDefault(); // Prevent default touch behavior
+      el.addEventListener("click", (e) => {
         e.stopPropagation();
         activePolygonPopups.forEach((popup) => popup.remove());
         activeMarkerPopups.forEach((popup) => popup.remove());
@@ -5456,7 +5451,7 @@ function updateClusters() {
           scene.remove(currentUfoModel);
           crosshair.style.display = "none";
         }
-      };
+      });
     }
     existingMarkers.push(marker);
   });
@@ -5848,6 +5843,7 @@ document.getElementById("button_for_topic2pic").addEventListener("click", async 
     console.error("Error updating profile TOPIC2PIC:", error);
   }
 });
+
 
   // Add these variables to manage visibility states
   let markersVisible = false;
