--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
   overflow: hidden;
   position: fixed;
 }
@@ -851,12 +850,27 @@ button[type="submit"],
 
 <div id="crosshair"></div>
 
-<div style="display: flex; position: fixed; top: 6.5vh; left: 0; z-index: 1006;">
+<div style="display: flex; position: fixed; top: 6.5vh; left: 0; z-index: 1006;" id="main-toggle-btn-container">
   <button id="main-toggle-btn" class="options-and-topic" style="margin-left: 0.3vh;">OPTIONS
   </button>
   <button id="topic-chat-btn" class="options-and-topic" style="margin-left: 1vw;">TOPIC CHAT
   </button>
 </div>
+
+<div style="display: none; position: fixed; top: 6.5vh; left: 0; z-index: 1006;" id="toggle-your-fov-btn-container">
+  <button id="toggle-your-fov-btn-btn" class="options-and-topic" style="margin-left: 0.3vh;">YOUR POV
+  </button>
+  <button id="topic-chat-btn" class="options-and-topic" style="margin-left: 1vw;">TOPIC CHAT
+  </button>
+</div>
+
+<div style="display: none; position: fixed; top: 6.5vh; left: 0; z-index: 1006;" id="toggle-toolbar-btn-container">
+  <button id="toggle-toolbar-btn-btn" class="options-and-topic" style="margin-left: 0.3vh;">TOOLBAR
+  </button>
+  <button id="topic-chat-btn" class="options-and-topic" style="margin-left: 1vw;">TOPIC CHAT
+  </button>
+</div>
+
 
 <button id="toggle-controls-btn" class="menu_buttons" style="top: 6.5vh;">CONTROLS
 </button>
