--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ html, body {
   width: 100vw;
   overflow: hidden;
   position: fixed;
+  top: 0;
+  left: 0;
 }
-
 .maplibregl-canvas {
   background-color: rgb(0, 0, 0) !important;
 }
-
 #map {
   position: fixed;
   top: 0;
@@ -117,7 +117,6 @@ html, body {
   width: 100%;
   height: 100%;
 }
-
 #three-container {
   position: fixed;
   top: 0;
