--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@ html, body {
   top: 0;
   left: 0;
 }
+
 .maplibregl-canvas {
   background-color: rgb(0, 0, 0) !important;
 }
+
 #map {
   position: fixed;
   top: 0;
@@ -117,6 +119,7 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
 #three-container {
   position: fixed;
   top: 0;
@@ -1929,20 +1932,41 @@ button[type="submit"],
 
     <script>
 
-      // Capture the initial viewport height
-    let initialHeight = window.innerHeight;
+// Capture the initial viewport height
+let initialHeight = window.innerHeight;
+    let initialWidth = window.innerWidth;
 
-// Set the html and body height to the initial viewport height
-window.addEventListener('load', () => {
-  document.documentElement.style.height = `${initialHeight}px`;
-  document.body.style.height = `${initialHeight}px`;
-});
+    // Set the html and body height to the initial viewport height
+    window.addEventListener('load', () => {
+      document.documentElement.style.height = `${initialHeight}px`;
+      document.body.style.height = `${initialHeight}px`;
+      // Update MapLibre GL and Three.js canvases if needed
+      updateCanvasSizes();
+    });
 
-// Prevent resizing when the keyboard opens
-window.addEventListener('resize', () => {
-  document.documentElement.style.height = `${initialHeight}px`;
-  document.body.style.height = `${initialHeight}px`;
-});
+    // Prevent resizing when the keyboard opens
+    window.addEventListener('resize', () => {
+      document.documentElement.style.height = `${initialHeight}px`;
+      document.body.style.height = `${initialHeight}px`;
+      // Update canvas sizes on resize to ensure consistency
+      updateCanvasSizes();
+    });
+
+    // Function to update MapLibre GL and Three.js canvas sizes
+    function updateCanvasSizes() {
+      // For MapLibre GL
+      const mapCanvas = document.querySelector('#map .maplibregl-canvas');
+      if (mapCanvas) {
+        mapCanvas.style.width = `${initialWidth}px`;
+        mapCanvas.style.height = `${initialHeight}px`;
+      }
+      // For Three.js
+      const threeCanvas = document.querySelector('#three-container canvas');
+      if (threeCanvas) {
+        threeCanvas.style.width = `${initialWidth}px`;
+        threeCanvas.style.height = `${initialHeight}px`;
+      }
+    }
 
 
       const APP_METADATA = {
