--- a/index.html
+++ b/index.html
@@ -1932,43 +1932,6 @@ button[type="submit"],
 
     <script>
 
-// Capture the initial viewport height
-let initialHeight = window.innerHeight;
-    let initialWidth = window.innerWidth;
-
-    // Set the html and body height to the initial viewport height
-    window.addEventListener('load', () => {
-      document.documentElement.style.height = `${initialHeight}px`;
-      document.body.style.height = `${initialHeight}px`;
-      // Update MapLibre GL and Three.js canvases if needed
-      updateCanvasSizes();
-    });
-
-    // Prevent resizing when the keyboard opens
-    window.addEventListener('resize', () => {
-      document.documentElement.style.height = `${initialHeight}px`;
-      document.body.style.height = `${initialHeight}px`;
-      // Update canvas sizes on resize to ensure consistency
-      updateCanvasSizes();
-    });
-
-    // Function to update MapLibre GL and Three.js canvas sizes
-    function updateCanvasSizes() {
-      // For MapLibre GL
-      const mapCanvas = document.querySelector('#map .maplibregl-canvas');
-      if (mapCanvas) {
-        mapCanvas.style.width = `${initialWidth}px`;
-        mapCanvas.style.height = `${initialHeight}px`;
-      }
-      // For Three.js
-      const threeCanvas = document.querySelector('#three-container canvas');
-      if (threeCanvas) {
-        threeCanvas.style.width = `${initialWidth}px`;
-        threeCanvas.style.height = `${initialHeight}px`;
-      }
-    }
-
-
       const APP_METADATA = {
         name: "PlanNet",
         description: "A Hashinals application using WalletConnect via Kiloscribe",
@@ -5355,12 +5318,51 @@ function initializeRotation(initialLng, initialLat) {
 // Example: Call this when your map or scene is initialized
 // initializeRotation(map.getCenter().lng, map.getCenter().lat);
 
-window.addEventListener("resize", () => {
-  camera.aspect = window.innerWidth / window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  map.resize();
-});
+
+    // Capture the initial viewport dimensions
+    const initialWidth = window.innerWidth;
+    const initialHeight = window.innerHeight;
+
+    // Set the html, body, and canvas sizes to initial dimensions
+    window.addEventListener('load', () => {
+      document.documentElement.style.height = `${initialHeight}px`;
+      document.body.style.height = `${initialHeight}px`;
+      // Set initial sizes for Three.js and MapLibre GL
+      camera.aspect = initialWidth / initialHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(initialWidth, initialHeight);
+      map.resize();
+      // Ensure canvas CSS matches
+      updateCanvasSizes();
+    });
+
+    // Prevent resizing when the keyboard opens
+    window.addEventListener('resize', () => {
+      // Force html, body to initial height
+      document.documentElement.style.height = `${initialHeight}px`;
+      document.body.style.height = `${initialHeight}px`;
+      // Use initial dimensions instead of dynamic window.innerWidth/Height
+      camera.aspect = initialWidth / initialHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(initialWidth, initialHeight);
+      map.resize();
+      // Ensure canvas CSS matches
+      updateCanvasSizes();
+    });
+
+    // Function to set canvas CSS sizes
+    function updateCanvasSizes() {
+      const mapCanvas = document.querySelector('#map .maplibregl-canvas');
+      if (mapCanvas) {
+        mapCanvas.style.width = `${initialWidth}px`;
+        mapCanvas.style.height = `${initialHeight}px`;
+      }
+      const threeCanvas = document.querySelector('#three-container canvas');
+      if (threeCanvas) {
+        threeCanvas.style.width = `${initialWidth}px`;
+        threeCanvas.style.height = `${initialHeight}px`;
+      }
+    }
 
 animate();
 
